<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PathSelection">

    <TextView
        android:id="@+id/lblHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/biiig"
        android:text="@string/hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblWellBeing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:text="@string/wellbeing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHello" />

    <Button
        android:id="@+id/btnConventionel"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_text_side"
        android:layout_marginTop="@dimen/biiig"
        android:text="@string/conventional"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPathQuestion" />

    <Button
        android:id="@+id/btnCreative"
        android:layout_width="140sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/biiig"
        android:layout_marginEnd="@dimen/distance_text_side"
        android:text="@string/creativ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPathQuestion" />

    <TextView
        android:id="@+id/lblPathQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/biiig"
        android:text="@string/choose_path_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWellBeing" />
</androidx.constraintlayout.widget.ConstraintLayout>